--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /node_modules
-/*.sublime-workspace
 /out
+.sass-cache
+*.sublime-workspace
+*.sublime-project
+*.css
+*.key
+*.pem
+*.crt
+*.csr
+_*.*
